# CsvReaderLibrary

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  csvreader.cpp  csvreader.hpp  field.hpp  gmtfield.cpp  gmtfield.hpp
tests/: CMakeLists.txt  tst_csvreader.cpp  tst_gmtfield.cpp
